dataset1235/2025-2/805158916/users/674524038/executions/3435325918_359761547.log
== RUN (2025-09-03 14:25:57)
-- CODE: 
idade = int(input("Insira idade: "))
if (idade >= 2):
  print("paga")
else:
  print(nao_paga)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Insira idade: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Insira idade: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Insira idade: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Insira idade: paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:26:15)
-- CODE: 
idade = int(input("Insira idade: "))
if (idade >= 2):
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Insira idade: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Insira idade: nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Insira idade: nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Insira idade: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Insira idade: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Insira idade: paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:26:11)
-- CODE: 
idade = int(input("Insira idade: "))
if (idade >= 2):
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Insira idade: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Insira idade: nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Insira idade: nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Insira idade: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Insira idade: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Insira idade: paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
